--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html 	xmlns="http://www.w3.org/1999/xhtml" 
 		xmlns:h="http://xmlns.jcp.org/jsf/html" 
 		xmlns:f="http://xmlns.jcp.org/jsf/core"
@@ -12,13 +14,12 @@
 		<h:form id="login">
 			<p:fieldset legend="Login">
 				<h:panelGrid columns="3">
-	
 					<p:outputLabel value="Login:" for="loginUsu" />
-					<p:inputText id="loginUsu" value="#{loginBean.usuario.login}" required="true" requiredMessage="Login obrigatório" />
+					<p:inputText id="loginUsu" value="#{loginBean.usuarioDTO.login}" required="true" requiredMessage="Login obrigatório" />
 					<p:message for="loginUsu" />
 	
 					<p:outputLabel value="Senha:" for="senha" />
-					<p:password id="senha" value="#{loginBean.usuario.senha}" feedback="false" required="true" />
+					<p:password id="senha" value="#{loginBean.usuarioDTO.senha}" feedback="false" required="true" />
 					<p:message for="senha" />
 					
 					<p:commandButton value="Efetuar Login" action="#{loginBean.efetuarLogin}" update="@form" process="@form"/>
