--- a/src/main/webapp/tela_inicial.xhtml
+++ b/src/main/webapp/tela_inicial.xhtml
@@ -7,11 +7,19 @@
 		xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
 	<h:head>
-		<title>Tela Inicial</title>
+		<title>Transformation Tools</title>
 	</h:head>
 	
 	<h:body>
-		<h1>Tela Inicial</h1>
+		<h:form>          
+		    <p:growl id="messages" showDetail="true" />
+		 
+		    <p:tieredMenu style="width:200px">
+		        <p:submenu label="Input" icon="ui-icon-gear">
+		            <p:menuitem value="Popular input" actionListener="#{mainMenuBean.save}" update="messages" icon="ui-icon-gear" />
+		        </p:submenu>
+		        <p:separator />
+		    </p:tieredMenu>
+    	</h:form>
 	</h:body>
-
 </html>
