--- a/src/main/webapp/cadastrar_usuario.xhtml
+++ b/src/main/webapp/cadastrar_usuario.xhtml
@@ -12,6 +12,8 @@
 	
 	<h:body>
 		<h:form id="cadastroUsuarioForm">
+			<p:messages id="messages" showDetail="true" closable="true" />
+			
 		    <p:panel id="cadastroUsuario" header="Cadastro" style="margin-bottom:20px">
 		    	<h:message for="cadastroUsuario" id="mensagemCadastroUsuario" style="color:red" />
 		        <h:panelGrid columns="3" cellpadding="10">
