Adding Insert Condition function

--- a/src/main/webapp/_template.xhtml
+++ b/src/main/webapp/_template.xhtml
@@ -22,6 +22,8 @@
 					    	<p:separator />
 					        <p:menuitem value="Popular input" action="#{mainMenuBean.popularInput}" update="messages" icon="ui-icon-gear" />
 					        <p:separator />
+					        <p:menuitem value="Inserir IF" action="#{mainMenuBean.inserirIf}" update="messages" icon="fa-question" />
+					        <p:separator />
 					        <p:menuitem value="Logout" action="#{mainMenuBean.logout}" update="messages" icon="ui-icon-extlink" />
 					    </p:menu>
 					    
